package domain;

public class Viento extends Instrumentos{

    public Viento(int codigo, int precio, int stock, String nombre, String material) {
        super(codigo, precio, stock, nombre, material);
    }

}
